--- a/homepage_stl.css
+++ b/homepage_stl.css
@@ -76,8 +76,44 @@ header {
     margin: 20px;
 }
 
-.ssaass {
-    height: 200px;
+.main-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+input {
+    border: 3px solid black;
+    border-radius: 6px;
+    background-color: aqua;
+    padding: 10px;
+}
+
+label {
+    font-size: 30px;
+    color: green;
+    padding: 10px;
+}
+
+button {
+    font-size: 30px;
+    background-color: blue;
+    border: 3px solid black;
+    border-radius: 30px;
+}
+
+button:hover {
+    transition: 0.2s linear;
+    color: bisque;
+    background-color: aquamarine;
+}
+
+.form-placement {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 footer {
